--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "baseui": "^10.9.2",
+    "lucide-react": "^0.456.0",
     "next": "14.2.17",
     "react": "^18",
-    "react-dom": "^18",
-    "styletron-engine-monolithic": "^1.0.0",
-    "styletron-react": "^6.1.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.0.3",
     "typescript": "^5"
   }
 }
